feat: Implement inventory management page for admin with stock editing functionality
feat: Create checkout page for handling user orders and payment processing

feat: Develop orders page to display user's order history with real-time updates

feat: Add badge component for displaying status indicators

feat: Enhance API service with comprehensive order and inventory management methods

feat: Establish order store for managing order state and real-time updates

feat: Create product store for fetching and managing product data

test: Add end-to-end tests for user login functionality